src/objects/Mentor_Tracking_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>Credential_Profile__c</fullName>
        <label>Credential Profile</label>
        <referenceTo>Credential_Profile__c</referenceTo>
        <relationshipLabel>Mentor Tracking Metadata</relationshipLabel>
        <relationshipName>Mentor_Tracking_Metadata</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credential_Record_Date_Field__c</fullName>
        <label>Credential Record Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential_Record_Source_Field__c</fullName>
        <label>Credential Record Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_to_Update__c</fullName>
        <label>Field to Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parallel_Credentials_Operator__c</fullName>
        <label>Parallel Credentials Operator</label>
        <picklist>
            <picklistValues>
                <fullName>AND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parallel_Credentials_Type__c</fullName>
        <label>Parallel Credentials Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parallel_Credentials__c</fullName>
        <label>Parallel Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <label>Report</label>
        <picklist>
            <picklistValues>
                <fullName>DHR CPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Similar_Credentials__c</fullName>
        <label>Similar Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Superceded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Superceded By</label>
        <referenceTo>Credential_Profile__c</referenceTo>
        <relationshipLabel>Mentor Tracking Metadata (Superceded By)</relationshipLabel>
        <relationshipName>Mentor_Tracking_Metadata2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supercedes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supercedes</label>
        <referenceTo>Credential_Profile__c</referenceTo>
        <relationshipLabel>Mentor Tracking Metadata (Credential Profile)</relationshipLabel>
        <relationshipName>Mentor_Tracking_Metadata1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mentor Tracking Metadata</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Credential_Profile__c</columns>
        <columns>Credential_Record_Date_Field__c</columns>
        <columns>Credential_Record_Source_Field__c</columns>
        <columns>Field_to_Update__c</columns>
        <columns>Report__c</columns>
        <columns>Similar_Credentials__c</columns>
        <columns>Superceded_By__c</columns>
        <columns>Supercedes__c</columns>
        <columns>Parallel_Credentials__c</columns>
        <columns>Parallel_Credentials_Operator__c</columns>
        <columns>Parallel_Credentials_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MTM-{000000}</displayFormat>
        <label>Mentor Tracking Meta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentor Tracking Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>